# tauri-meigongxitong-xinban

./: .env.example  .gitignore  GPT-Image-2 API 调用说明.md  README.md  index.html  package-lock.json  package.json  run-dev.bat  run-dev.ps1  vite.config.js  云服务器添加SSH公钥.md  云端部署与分发手册.md  每日群发话术50条.txt
docs/: backend-gateway-deploy.md  local-backend-gateway-windows.md  六台电脑独立部署指南.md
docs/cloud-gateway/: Caddyfile  README.md  bootstrap.sh  build-and-install.sh  client-setup.md  csgh-backend-gateway.service  gateway.env.example  update.sh  (+1 more)
scripts/: build-employee-installer.ps1  build-local-backend-gateway.ps1  build-patrol-scripts.mjs  export-oss-images.mjs  fix-detail-page-remote-db.mjs  fix-line5-remote-db.mjs  fix-line6-remote-db.mjs  install-local-backend-gateway-firewall.ps1  install-local-backend-gateway-startup.ps1  run-migration.mjs  start-local-backend-gateway.ps1  supabase-usage-report.mjs
src/: App.tsx  env.d.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  brand_story_prompt.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: admin_user.rs  api.rs  api_validation.rs  apimart.rs  apimart_reference.rs  apimart_task.rs  brand_story.rs  brand_story_clients.rs  env_config.rs  gateway_limiter.rs  gateway_queue.rs  gemini_response.rs  http_client.rs  image_api_response.rs  image_generation_payload.rs  image_proc.rs  image_provider.rs  lib.rs  line_health.rs  main.rs  manxiaobai_edit.rs  oss.rs  pockgo_chat.rs  pockgo_chat_format.rs  pockgo_transport.rs  reference_image.rs  vectorengine_edit.rs  yunwu_edit.rs
supabase/: README.md  schema.sql
tests/: admin-all-accounts.test.ts  admin-log-filters.test.ts  admin-log-style.test.ts  apimart-line.test.ts  avatar-generation.test.ts  avatar-oss-compression.test.ts  backend-gateway.test.ts  batch-download-button-ui.test.ts  batch-download.test.ts  brand-story-download.test.ts  brand-story-history-download.test.ts  client-error-log.test.ts  clipboard-images.test.ts  data-analysis.test.ts  detail-page-tool.test.ts  devtools-guard.test.ts  gateway-auto-line-routing.test.ts  generated-image-copy.test.ts  generation-concurrency-guard.test.ts  generation-line-position.test.ts  generation-log-dedupe.test.ts  generation-retry.test.ts  generation-sequence.test.ts  history-cloud-pagination.test.ts  history-normalize.test.ts  history-panel.test.ts  history-retention.test.ts  history.test.ts  image-compression.test.ts  image-edit-tool.test.ts  inactive-account-session.test.ts  line-health.test.ts  local-gateway-deploy.test.ts  local-gateway-ops.test.ts  login-background.test.ts  login-editorial.test.ts  login-page-copy.test.ts  login-preferences.test.ts  manxiaobai-line.test.ts  merchant-copy-card.test.ts  (+40 more)
(+163 files in other folders)
