[package]
name = "csgh-image-studio"
version = "0.1.0"
description = "呈尚策划 · 头像店招系统"
authors = ["呈尚策划"]
edition = "2021"

[lib]
name = "csgh_image_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream", "system-proxy"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
dotenvy = "0.15"
chrono = "0.4"
aliyun-oss-rust-sdk = { version = "0.2.2", default-features = false, features = ["async"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
