[package]
name = "csgh-image-studio"
version = "2.0.0"
description = "呈尚策划 · 美工生图系统PRO"
authors = ["呈尚策划"]
edition = "2021"
default-run = "csgh-image-studio"

[lib]
name = "csgh_image_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "backend-gateway"
path = "src/bin/backend_gateway.rs"

[features]
default = ["tauri-commands"]
tauri-commands = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-plugin-fs", "dep:tauri-plugin-shell", "dep:tauri-build"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream", "system-proxy"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
dotenvy = "0.15"
chrono = "0.4"
aliyun-oss-rust-sdk = { version = "0.2.2", default-features = false, features = ["async"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
